src/test/examples/custom/valid/class/classFunctionCanAccessPublicAttributes.wacc
# Class functions can access public class attributes

begin
  class H is 
    public int v
    H(int v) 
    end
    private int J(int v) is 
      return 0
    end
    private int f() is 
       v = 3 ;
       return v
    end
  end
  int v = 0 
end